fixing services section scrolling on mobile

--- a/src/components/Services/ServicesSection.css
+++ b/src/components/Services/ServicesSection.css
@@ -1,5 +1,6 @@
 .services {
     height: 100vh;
+    width: 100%;
     margin-top: 8rem;
     display: grid;
     justify-items: center;
